# Barcode-processing

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  ocr_filename_validator.py  pdf_barcode_text_block_validator.py  pdf_text_extract_validator.py  pyproject.toml  requirements.txt  test_pdf_barcode_text_block_validator.py
docs/: dependencies.md  feishu_docker_integration_plan.md  module_boundaries.md  pdf_barcode_crop_export_design.md  repo_structure.md  restructure_plan.md
scripts/: README.md  export_barcode_labels.py
scripts/experiments/: README.md
scripts/experiments/pdf_text/: export_barcode_labels.py  pdf_barcode_text_block_validator.py
scripts/legacy/: README.md
scripts/legacy/ocr/: batch_ocr_sample_validator.py  ocr_filename_validator.py
src/barcode_tool/: __init__.py  cli.py
src/barcode_tool/api/: __init__.py  app.py
src/barcode_tool/config/: settings.py
src/barcode_tool/integrations/: __init__.py  feishu_client.py
src/barcode_tool/models/: __init__.py  types.py
src/barcode_tool/pipeline/: __init__.py  label_export_pipeline.py  pdf_text_pipeline.py
src/barcode_tool/services/: __init__.py  bbox_builder.py  block_cluster.py  (+12 more)
tests/: test_bbox_builder.py  test_filename_rules.py  test_output_layout.py  test_source_pdf_cleanup.py
tests/unit/: test_bbox_builder.py  test_crop_exporter.py  test_debug_preview.py  test_feishu_debug_endpoints.py  test_feishu_webhook_idempotency.py  test_label_analyzer.py  test_label_builder.py  test_label_enricher.py  test_label_export_pipeline.py  test_manifest_writer.py
(+4 files in other folders)
