[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "barcode-processing"
version = "0.1.0"
description = "Internal toolkit for PDF barcode label extraction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pymupdf>=1.24",
  "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
barcode-tool = "barcode_tool.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
